Progress: SVG based location view and edit
